--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    background: linear-gradient(#e664b4, #9198e5);
 
 }
 
